<resources>
    <string name="app_name">Teste_DYNAMOX</string>

    <string name="facebook_app_id">3505148719758998</string>
    <string name="fb_login_protocol_scheme">fb3505148719758998</string>
    <string name="facebook_client_token">56789</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="quiz_dynamox">Quiz Dynamox</string>
    <string name="digite_seu_login_aqui">Digite seu login aqui</string>
    <string name="entrar">Entrar</string>
    <string name="ou">Ou</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="ainda_nao_tem_cadastro">Ainda não tem cadastro?</string>
    <string name="cadastreSe">Cadastre-se</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statement">Statement</string>
    <string name="options">Options</string>
    <string name="proxima_pergunta">Próxima pergunta</string>


</resources>